# ranks_test

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
app/: Dockerfile  pyproject.toml
app/src/: manage.py
app/src/payment_api/: apps.py  models.py  urls.py  views.py
app/src/payment_api/migrations/: 0001_initial.py  0002_alter_item_options_alter_item_price.py
app/src/payment_api/templates/payment_api/: buy.html  success.html
app/src/ranks/: asgi.py  settings.py  urls.py  wsgi.py
